--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Ubuntu Kyc</title>
 
   <base href="/" />
 
@@ -16,10 +16,20 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAidkw5y4GA79ZnUlRaWBNFQnjHu15dDgs&sensor=false" type="text/javascript"></script>
+
+ 
+
 </head>
 
 <body>
   <app-root></app-root>
+
+  <!-- <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+  </script> -->
 </body>
 
 </html>
