--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAidkw5y4GA79ZnUlRaWBNFQnjHu15dDgs&sensor=false" type="text/javascript"></script>
+  <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAidkw5y4GA79ZnUlRaWBNFQnjHu15dDgs&sensor=false" type="text/javascript"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
  
 
